[package]
name = "max30102"
description = "Device-agnostic driver for Maxim Integrated MAX30102"
version = "0.1.0"
authors = ["Eugene P. <eupn@protonmail.com>"]
repository = "https://github.com/eupn/max30102"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "max30102",
]
license = "MIT"
readme = "README.md"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]
